<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Spinner
        android:id="@+id/dropdownlist_abs_content_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp" >

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/render" >

            <TextView
                android:id="@+id/log"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="Empty" />
        </ScrollView>
    </RelativeLayout>

    <Spinner
        android:id="@+id/select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dropdownlist_abs_content_id"
        android:layout_below="@+id/dropdownlist_abs_content_id" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select"
        android:layout_below="@+id/select"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_license"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_license" />

        <Button
            android:id="@+id/btn_check_rights"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_check_rights" />

        <Button
            android:id="@+id/btn_remove_rights"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_remove_rights" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_launch_movie_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select"
        android:layout_below="@+id/linearLayout2"
        android:text="@string/str_launch_movie_app" />

    <Button
        android:id="@+id/btn_show_mpd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select"
        android:layout_below="@+id/btn_launch_movie_app"
        android:text="@string/str_show_mpd" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/select"
        android:layout_below="@+id/btn_show_mpd"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_registration" />

        <Button
            android:id="@+id/btn_check_regist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_check_regist" />

        <Button
            android:id="@+id/btn_deregistration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_deregistration" />
    </LinearLayout>

</RelativeLayout>